# claude-ro-crate-skill

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SPEC.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
examples/privacy-safe-public-crate/: README.md
examples/process-run-crate/: README.md
examples/provenance-run-crate/: README.md  workflow.cwl
examples/workflow-run-crate/: README.md  Snakefile
hooks/: hooks.json  rocrate_compact.py  rocrate_hook.py  rocrate_post_tool_use.py  rocrate_session_start.py  rocrate_stop_failure.py  rocrate_task.py  rocrate_user_prompt.py  rocrate_worktree.py
skills/ro-crate-run/: SKILL.md
skills/ro-crate-run-admin/: SKILL.md
src/ro_crate_run/: __init__.py  cli.py  clock.py  commands.py  config.py  constants.py  context.py  events.py  export.py  files.py  fs.py  git.py  hooks.py  ids.py  inspect.py  install.py  journal.py  models.py  oci.py  preview.py  privacy.py  proc.py  recovery.py  redact.py  redaction.py  remote_journal.py  runner.py  signing.py  software_probe.py  state.py  time.py
templates/: settings.rocrate.json
tests/: graph_helpers.py
tests/e2e/: README.md  __init__.py  assertions.py  coverage.py  harness.py  run.py  spec.py  test_e2e_coverage.py  test_e2e_scenarios.py  test_harness_isolation.py  test_harness_unit.py
tests/golden/: _compare.py  _fixtures.py  test_compare_helper.py  test_golden_crates.py  test_privacy_public.py
tests/integration/: test_acceptance.py  test_audit_fixes.py  test_auto_start.py  test_cli_commands_extra.py  test_cli_process_run.py  test_cli_sign.py  (+14 more)
(+148 files in other folders)
